# GraphColouring

./: .gitignore  README.md  graphloading.hpp  main  main.cpp
instance_generator/: generator.cpp
solver/: CMakeLists.txt  howtosolver.txt
solver/include/: graphloading.hpp
solver/instances/: simple.txt
solver/src/: main.cpp
solver/tests/: tests.cpp
